# lithium

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .taskcluster.yml  .travis.yml  README.md  __init__.py  __main__.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
interestingness/: __init__.py  crashes.py  crashesat.py  crashesat_timed.py  diffTest.py  envVars.py  fileIngredients.py  hangs.py  outputs.py  outputs_timed.py  range.py  timedRun.py  ximport.py
lithium/: __init__.py  binarysearch.py  crashes.py  crashesat.py  crashesat_timed.py  gdb-quick.txt  hangs.py  jitdiff.py  lithium.py  ntr.py  outputs.sh  outputs1.sh  outputs_timed.py  outputs_tries.py  test_lithium.py  tests.py  ximport.py
lithium/doc/: algorithm.html  algorithm.md  creating-tests.html  related.txt  using-for-firefox.html  using-for-firefox.md  using.html
lithium/examples/: __init__.py
lithium/examples/arithmetic/: 11.txt  __init__.py  product_divides.py  readme.txt  sum_mod.py
lithium/examples/mozilla/: quit.js
src/lithium/: __init__.py  __main__.py  reducer.py  strategies.py  testcases.py  util.py
src/lithium/docs/: algorithm.md  creating-tests.md  using-for-firefox.md
src/lithium/docs/examples/: crash.c
src/lithium/docs/examples/arithmetic/: product_divides.py  readme.txt
src/lithium/interestingness/: __init__.py  crashes.py  diffTest.py  diff_test.py  envVars.py  env_vars.py  fileIngredients.py  file_ingredients.py  hangs.py  outputs.py  range.py  repeat.py  timedRun.py  timed_run.py  utils.py  ximport.py
src/lithium/tests/: test_lithium.py
tests/: conftest.py  test_interestingness.py  test_lithium.py  test_strategies.py  test_testcases.py  test_util.py
