[metadata]
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Software Development :: Testing
description = Lithium is an automated testcase reduction tool
description-file = README.md
keywords =
    fuzz
    fuzzing
    reduce
    reducer
    reduction
    security
    test
    testing
license = MPL 2.0
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = lithium-reducer
url = https://github.com/MozillaSecurity/lithium

[options]
package_dir =
    = src
packages =
    lithium
    lithium.interestingness
zip_safe = False

[options.entry_points]
console_scripts =
    lithium = lithium.reducer:main
lithium_strategies =
    check-only = lithium.strategies:CheckOnly
    minimize = lithium.strategies:Minimize
    minimize-around  = lithium.strategies:MinimizeSurroundingPairs
    minimize-balanced = lithium.strategies:MinimizeBalancedPairs
    minimize-collapse-brace = lithium.strategies:CollapseEmptyBraces
    replace-arguments-by-globals = lithium.strategies:ReplaceArgumentsByGlobals
    replace-properties-by-globals = lithium.strategies:ReplacePropertiesByGlobals
lithium_testcases =
    char = lithium.testcases:TestcaseChar
    jsstr-char = lithium.testcases:TestcaseJsStr
    line = lithium.testcases:TestcaseLine
    symbol-delimiter = lithium.testcases:TestcaseSymbol

[options.extras_require]
dev =
    pre-commit
    tox

[options.package_data]
lithium =
    docs/*.*
    docs/examples/*.*
    docs/examples/arithmetic/*
